syntax = "proto3";

package skipchain;

import "google/protobuf/any.proto";
import "blockchain/messages.proto";

message BlockProto {
    uint64 index = 1;
    uint32 height = 2;
    uint32 baseHeight = 3;
    uint32 maximumHeight = 4;
    bytes genesisID = 5;
    bytes dataHash = 6;
    google.protobuf.Any payload = 7;
    repeated blockchain.Conode conodes = 8;
    repeated bytes backlinks = 9;
}

message VerifiableBlockProto {
    BlockProto block = 1;
    google.protobuf.Any chain = 2;
}

message PropagateGenesis {
    BlockProto genesis = 1;
}

message PropagateSeal {
    google.protobuf.Any seal = 1;
}
